2008-10-15  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/GitParser.py:

	Ignore not merged local branches and stash branches. Unpack all
	branches when we find that the curent commit is the parent of such
	branches, instead of unpacking only the first one we find. Take
	into account also that the current commit can be both the last
	commit of a branch and the parent of another one.
	
2008-10-14  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Another approach for the incubator workaround since it seems the
	old one is not enough.
	
2008-10-14  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/Log.py:

	Classes for handling reading and writing from/to logs

	* pycvsanaly2/Parser.py:
	* pycvsanaly2/ParserFactory.py:
	* pycvsanaly2/main.py:

	Change the way the parser is fed, the parser don't read the log
	anymore, it's read from the main who feeds the parser using the
	new LogReader.
	
2008-10-14  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/BzrParser.py:
	* pycvsanaly2/CVSParser.py:
	* pycvsanaly2/GitParser.py:
	* pycvsanaly2/SVNParser.py:
	* pycvsanaly2/Parser.py:

	Mark parse_line method as "private".
	
2008-10-13  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Fix a typo.

2008-10-13  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Workaround to avoid stuff from the incubator apache repository.
	
2008-10-07  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/GitParser.py:

	Rework the git parser to support branches.
	
2008-10-07  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/Parser.py:
	* pycvsanaly2/Repository.py:

	For the SCMs where it's not possible to commit in more than one
	branch at the same time (in the same commit) we can just associate